src/test/deca/context/valid/method_redefinition_return_subtype.deca
/*
    Description : Redefinition d'une methode, avec comme type de retour un sous type de la methode originelle (cf poly papier p14 "Si une methode est redefinie, alors celle ci...")

    Résultat : OK
*/
class A{
    C x(int d){
        C p = new C();
        return p;

    }
}
class C{}
class B extends C{

}

class D extends A{
    B x(int d){
        B w = new B();
        return w;
    }
}

